# libgpiod-private

./: .gitignore  Doxyfile.in  Makefile.am  README  configure.ac
bindings/glib/: .gitignore  Makefile.am  chip-info.c  chip.c  edge-event.c  error.c  generated-enums.h.template  gpiod-glib.h  gpiod-glib.pc.in  gpiodglib.h  gpiodglib.pc.in  gpiodglibchip.c  gpiodglibchip.h  gpiodglibchipinfo.c  gpiodglibchipinfo.h  gpiodglibedgeevent.c  gpiodglibedgeevent.h  gpiodglibenums.c  gpiodgliberror.c  gpiodgliberror.h  gpiodglibgeneratedenums.c  gpiodglibgeneratedenums.c.template  gpiodglibgeneratedenums.h.template  gpiodglibinfoevent.c  gpiodglibinfoevent.h  gpiodglibinternal.c  gpiodglibinternal.h  gpiodglibline.h  gpiodgliblineconfig.c  gpiodgliblineconfig.h  gpiodgliblineinfo.c  gpiodgliblineinfo.h  gpiodgliblinerequest.c  gpiodgliblinerequest.h  gpiodgliblinesettings.c  gpiodgliblinesettings.h  gpiodglibmisc.c  gpiodglibmisc.h  gpiodglibrequestconfig.c  gpiodglibrequestconfig.h  (+9 more)
bindings/glib/examples/: find_line_by_name_glib.c  get_chip_info_glib.c  get_line_info_glib.c  get_line_value_glib.c  get_multiple_line_values_glib.c  reconfigure_input_to_output_glib.c  toggle_line_value_glib.c  toggle_multiple_line_values_glib.c  watch_line_info_glib.c  watch_line_value_glib.c  watch_multiple_edge_rising_glib.c
bindings/glib/gpiod-glib/: Makefile.am  chip-info.h  chip.h  edge-event.h  error.h  gpiodglibgeneratedenums.h  info-event.h  line-config.h  line-info.h  line-request.h  line-settings.h  line.h  misc.h  request-config.h
bindings/glib/tests/: helpers.c  helpers.h  tests-chip-info.c  tests-chip.c  tests-edge-event.c  tests-info-event.c  tests-line-config.c  tests-line-info.c  tests-line-request.c  tests-line-settings.c  tests-misc.c  tests-request-config.c
dbus/client/: Makefile.am  common.c  common.h  detect.c  find.c  get.c  gpiocli-test.bash  gpiocli.c  info.c  map.c  monitor.c  notify.c  reconfigure.c  release.c  request.c  requests.c  set.c  wait.c
dbus/data/: 90-gpio.rules  Makefile.am  gpio-manager.service  io.gpiod1.conf
dbus/lib/: Makefile.am  io.gpiod1.xml
dbus/manager/: Makefile.am  daemon.c  daemon.h  gpio-manager.c  helpers.c  helpers.h
dbus/tests/: Makefile.am  daemon-process.c  daemon-process.h  helpers.c  helpers.h  tests-chip.c  tests-line.c  tests-request.c
tests/: Makefile.am
tests/bash/: gpiod-bash-test-helper.inc
tools/: gpio-tools-test.bash
