# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2022-2023 Bartosz Golaszewski <bartosz.golaszewski@linaro.org>

otherincludedir = $(includedir)/gpiod-glib
otherinclude_HEADERS = \
	chip.h \
	chip-info.h \
	edge-event.h \
	error.h \
	generated-enums.h \
	info-event.h \
	line.h \
	line-config.h \
	line-info.h \
	line-request.h \
	line-settings.h \
	misc.h \
	request-config.h
